# llm_style

./: README.md  generated_dataset.csv  pyproject.toml  tasks.md
data/: README.md  handcoded_formality_examples.csv
notebooks/: 0-Create-Formality-Dataset.ipynb  1-Formality-Linear-Probe.ipynb  2-PairedFormality-Linear-Probe.ipynb  3-Domain-Linear-Probe.ipynb  4-Style-Latent.ipynb  4.a-TrainingCurve.ipynb  5-BLEU.ipynb  6-BLEU-Comparison-Table.ipynb  8-Style-Transfer.ipynb  README.md  latent_classifier_epoch_20.pt  rouge_results.json
paper/: main.tex  references.bib  scientific-paper-planner-outputs-checkpoint.json
paper/figures/: style_transfer_onehot_table.tex  style_transfer_table.tex
src/: formality_dataset.py
src/llm_style/: __init__.py  content_dataset.py  domain_dataset.py  formality_dataset.py  paired_formality_dataset.py  test_formality_dataset.py
